<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_camera"
            android:title="@string/camera" />

        <item
            android:id="@+id/nav_guide"
            android:icon="@mipmap/ic_explore_black"
            android:title="@string/guide" />

        <item
            android:id="@+id/nav_me"
            android:icon="@mipmap/ic_face_black"
            android:title="@string/me" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:icon="@mipmap/ic_add_black_48dp"
                android:title="@string/add_device" />
            <item
                android:icon="@mipmap/ic_info_black"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
